--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "drizzle-orm": "^0.43.1",
     "lucide-react": "^0.507.0",
     "next": "15.3.1",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
